# edge_ai_rag_bot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run.sh
conf/: config.yaml
src/: app_backend.py  app_frontend.py  data_loader.py  embedder.py  generator.py  index_pipeline.py  rag.py  retriever.py  scraper.py  utils.py  vector_store.py
test_data/: qa.json
